# mcp-app

mcp-server/: kural.py  pyproject.toml
mcp-server/nbs/: embedding.ipynb
